tests/ui/rfcs/rfc-2632-const-trait-impl/specializing-constness-2.stderr
error[E0049]: associated function `a` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/specializing-constness-2.rs:9:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | pub trait A {
LL |     fn a() -> u32;
   |         - expected 0 const parameters

error[E0049]: associated function `a` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/specializing-constness-2.rs:9:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | pub trait A {
LL |     fn a() -> u32;
   |         - expected 0 const parameters
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const fn `<T as A>::a` in constant functions
  --> $DIR/specializing-constness-2.rs:27:5
   |
LL |     <T as A>::a();
   |     ^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0049.
For more information about an error, try `rustc --explain E0015`.
